# LCHackathon2024SP

./: README.md
backend/: alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 744635b7433d_add_base_setup.py  97cc19ef557b_add_order_field_for_elements_of_known_.py
backend/mind_api/: crud.py  database.py  main.py  models.py  schemas.py  sudoku_solve.py
frontend/: package-lock.json  package.json
frontend/app/models/: builder.tsx  element.tsx  utils.tsx
frontend/app/routes/: _index.tsx  build.tsx  newelems.tsx
