[tool.poetry]
name = "lchackathon2024sp"
version = "0.1.0"
description = ""
authors = ["Daniel Neshyba-Rowe <rowedanielp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, < 4.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
alembic = "^1.10.4"
sqlalchemy = "^2.0.12"
pymysql = "^1.0.3"
cryptography = "^40.0.2"
pydantic = "^1.10.7"
orjson = "^3.8.12"



[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
